ADD: Document current session progress and completed tasks for WordGame and NumberGame